# snapd-desktop-integration

./: .clang-format  .gitignore  README.md  SECURITY.md  format-source.sh  gcovr.cfg  meson.build  meson_options.txt  run-test-sdi-notify.sh  run-test-sdi-progress-window.sh  run-test-theme-change.sh
.github/workflows/: build-test.yaml  format.yaml  test.yml  tics.yaml  unitary-test.yaml
coverage/: cobertura-notify.xml  cobertura-progress-window.xml  cobertura-theme-change.xml
coverage_base/: cobertura-notify.xml  cobertura-progress-window.xml
data/: com.canonical.Unity.LauncherEntry.dbus.xml  io.snapcraft.PrivilegedDesktopLauncher.dbus.xml  io.snapcraft.SnapChanges.dbus.xml  io.snapcraft.SnapDesktopIntegration.dbus.xml  io.snapcraft.SnapDesktopIntegration.desktop  meson.build  org.freedesktop.DBus.dbus.xml  org.freedesktop.login1.dbus.xml  org.freedesktop.login1.session.dbus.xml  org.freedesktop.systemd1.dbus.xml  org.freedesktop.systemd1.unit.dbus.xml
data/resources/: resources.gresource.xml  sdi-apparmor-prompt-dialog.ui  sdi-refresh-dialog.ui  snap_is_being_refreshed.ui  snap_is_being_refreshed_gtk4.cmb  snap_is_being_refreshed_gtk4.ui  style.css
po/: LINGUAS  POTFILES  POTFILES.in  ar.po  ca.po  es.po  fi.po  fr.po  gl.po  he.po  ie.po  meson.build  oc.po  pl.po  snapd-desktop-integration.pot
snap/: snapcraft.yaml
src/: changes.c  changes.h  dbus.c  dbus.h  ds-snapd-helper.c  ds-snapd-helper.h  ds-theme-set.c  ds-theme-set.h  ds-theme-watcher.c  ds-theme-watcher.h  ds_state.c  ds_state.h  main.c  meson.build  refresh_status.c  refresh_status.h  sdi-apparmor-prompt-agent.c  sdi-apparmor-prompt-agent.h  sdi-apparmor-prompt-dialog.c  sdi-apparmor-prompt-dialog.h  sdi-apparmor-prompt-monitor.c  sdi-apparmor-prompt-monitor.h  sdi-forced-refresh-time-constants.h  sdi-helpers.c  sdi-helpers.h  sdi-notify.c  sdi-notify.h  sdi-progress-dock.c  sdi-progress-dock.h  sdi-progress-window.c  sdi-progress-window.h  sdi-reboot-monitor.c  sdi-reboot-monitor.h  sdi-refresh-dialog.c  sdi-refresh-dialog.h  sdi-refresh-monitor-private.h  sdi-refresh-monitor.c  sdi-refresh-monitor.h  sdi-refresh-window.c  sdi-refresh-window.h  (+15 more)
src/resources/: meson.build  resources.gresource.xml  snap_is_being_refreshed.ui
src/user-session-helper/: meson.build  sdi-user-session-helper.c  sdi-user-session-helper.h
tests/: launch-weston-test-progress-window.sh  launch-weston-test-theme-change.sh  meson.build  mock-fdo-notifications.c  mock-fdo-notifications.h  mock-snapd.c  test-refresh-monitor.c  test-sdi-empty.c  test-sdi-notices-monitor.c  test-sdi-notify.c  test-sdi-progress-dock.c  test-sdi-progress-window.c  test-snapd-desktop-integration.c  weston-test-progress-window.ini  weston-test-theme-change.ini
tests/data/: meson.build
tests/data/applications/: kicad-no-icon_kicad-no-icon.desktop  kicad_kicad.desktop  meson.build  simple-scan-no-icon_simple-scan-no-icon.desktop  simple-scan_simple-scan.desktop  simple-scan_simple-scan.desktop.in
tests/data/icons/hicolor/: icon-theme.cache  index.theme
